beginning to add user session functionality
