# api.yml
@@ -24,42 +24,49 @@ paths:
         - client
       summary: Log in to the system
       description: Log in to the system
-      operationId: manager.login_user
-      requestBody:
-        description: Credentials for logging in
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                password:
-                  type: string
-        required: true
+      operationId: manager.login
+      parameters:
+        - name: client_id
+          in: query
+          description: Client Name
+          required: true
+          schema:
+            type: string
+        - name: password
+          in: query
+          description: Password
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Client'
-        '400':
-          description: Invalid username/password supplied
         '401':
-          description: Unauthorized
+          description: Invalid Client ID/password supplied
   /Client/Logout:
     post:
       tags:
         - client
       summary: Log out from the system
       description: Log out from the system
-      operationId: manager.logout_user
+      operationId: manager.logout
       responses:
         '200':
           description: Successful operation
-        '401':
-          description: Unauthorized
+        '404':
+          description: Already logged out
+  /Client/Status:
+    get:
+      tags:
+        - client
+      summary: Get client status
+      description: Get client status
+      operationId: manager.status
+      responses:
+        '200':
+          description: Logged in
+        '400':
+          description: Not logged in
   /Client/Password:
     put:
       tags:
